    not accessible for oidc-agent.

  [ Gabriel Zachmann ]
  * Add possibility to allow applications that run under another user access
    to the agent by using the --with-group option

  [ Marcus Hardt ]
  * Add debhelper-token
  * Remove build-essential from Build-Depends
  * Improve clean target to fix "source-is-missing" lintian warnings

  [ Gabriel Zachmann ]
  * Add possibility to avoid custom uri scheme (useful when running on a
    remote server)
  * Fixed bug with doubled communication when not all required scopes could be
    registered
  * Now displaying warning message when client regstration could not register
    all requested scopes.

  [ Gabriel Zachmann ]
  * Add public clients for deep and extreme datacloud

  [ Gabriel Zachmann ]
  * Add public clients for iam-demo.cloud.cnaf.infn.it

  [ Gabriel Zachmann ]
  * Fixed bug that might cause problems with providers that do not support
    PKCE. No longer sending code_verifier on auth code exchange requests.

  [ Gabriel Zachmann ]
  * Fixed some spelling errors.
  * Fix X11 settings only adjusted when the configuration file already exists.
  * Increased oidc-gen polling interval and duration.
  * oidc-gen now displays the scopes supported by the provider.
  * Scopes provided to oidc-gen are no longer intersected with the supported
    scopes.

  [ Gabriel Zachmann ]
  * Improve RPM build

  [ Gabriel Zachmann ]
  * Fix scope lookup not using cert path.
  * Exit oidc-gen when error during scope lookup.
  * Add option to oidc-token to specify name of calling application.
  * Add option to oidc-add to list currently loaded accounts. 
  * Fix no-scheme option not working if first url is scheme url.
  * Add option to oidc-agent that allows log message printed to stderr.
  * Fix that some information is printed to stderr instead of stdout.
  * Fix scopes not set when using password flow.

 -- Marcus Hardt <hardt@kit.edu>  Thu, 16 Jan 2020 15:36:29 +0200